--- a/src/app/shared/components/policy-landing-screen/policy-landing-screen.component.html
+++ b/src/app/shared/components/policy-landing-screen/policy-landing-screen.component.html
@@ -98,7 +98,9 @@
       </div>
     </p-tabPanel>
     <p-tabPanel header="Life Group">
-      <p>Life Group</p>
+      <div>
+        <app-policy-listing></app-policy-listing>
+      </div>
     </p-tabPanel>
     <p-tabPanel header="General">
       <p>General</p>
