--- a/src/app/features/lms/grp/components/policy/components/policy-listing/policy-listing.component.html
+++ b/src/app/features/lms/grp/components/policy/components/policy-listing/policy-listing.component.html
@@ -1,4 +1,4 @@
-
+<div class="main">
 <div class="container">
     <div style="padding-top: 35px;">Policies</div>
 
@@ -36,5 +36,6 @@
             </tr>
         </ng-template>
     </p-table>
+</div>
 </div>
 </div>
