--- a/src/app/features/crm/components/service-provider-types/service-provider-types.component.html
+++ b/src/app/features/crm/components/service-provider-types/service-provider-types.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="card-body">
           <div class="row mb-3">
-            <div class="col-md-4 col-6">
+            <div class="col-sm-4 col-6">
               <input
                 type="text"
                 class="form-control"
@@ -23,7 +23,7 @@
                 (input)="filterServiceProviderTypes($event)"
               />
             </div>
-            <div class="col-md-8 col-6">
+            <div class="col-sm-8 col-6">
               <div class="float-end">
                 <span class="icon-circle"
                   ><i
@@ -47,7 +47,7 @@
             </div>
           </div>
           <div class="row mb-5">
-            <div class="col-md-12 col-6">
+            <div class="col-sm-12 col-12">
               <p-table
                 #serviceProviderTypeTable
                 [value]="serviceProviderTypesData"
@@ -109,7 +109,7 @@
         </div>
         <div class="card-body">
           <div class="row mb-3">
-            <div class="col-md-4 col-6">
+            <div class="col-sm-4 col-6">
               <input
                 type="text"
                 class="form-control"
@@ -119,7 +119,7 @@
                 (input)="filterServiceProviderTypes($event)"
               />
             </div>
-            <div class="col-md-8 col-6">
+            <div class="col-sm-8 col-6">
               <div class="float-end">
                 <span class="icon-circle"
                   ><i
@@ -143,7 +143,7 @@
             </div>
           </div>
           <div class="row mb-5">
-            <div class="col-md-12 col-6">
+            <div class="col-sm-12 col-12">
               <p-table
                 #channelTable
                 [value]="serviceProviderActivitiesData"
@@ -274,7 +274,7 @@
               <select class="form-select" id="status" formControlName="status">
                 <option value="">Select Status</option>
                 <option
-                  *ngFor="let status of statusesData"
+                  *ngFor="let status of statusData"
                   [value]="status.value"
                 >
                   {{ status.name }}
