--- a/src/app/features/administration/components/tickets/authorization-tab/authorization-tab.component.css
+++ b/src/app/features/administration/components/tickets/authorization-tab/authorization-tab.component.css
@@ -10,3 +10,12 @@
   margin-right: 10px;
   cursor: pointer;
 }
+
+:host ::ng-deep .p-dropdown.p-dropdown-clearable .p-dropdown-label {
+  padding-right: 0px;
+  padding-top: 0px;
+}
+
+:host ::ng-deep .p-dropdown-items-wrapper .p-dropdown-items li .p-dropdown-item {
+  padding: 0.5rem 1.2rem;
+}
