--- a/src/app/features/administration/components/tickets/authorization-tab/authorization-tab.component.html
+++ b/src/app/features/administration/components/tickets/authorization-tab/authorization-tab.component.html
@@ -1,9 +1,19 @@
 <div class="row mt-5 mb-2">
-  <div class="col-6">
+  <div class="col-12">
     <label class="text-primary">Exceptions</label>
   </div>
+  <div class="col-sm-12 col-md-6">
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Search by id, description"
+      aria-label="search"
+      aria-describedby="search"
+      (input)="filterExceptions($event)"
+    />
+  </div>
 
-  <div class="col-6 d-flex justify-content-end">
+  <div class="col-sm-12 col-md-6 d-flex justify-content-end">
     <button
       class="btn btn-outline-primary me-2" style="font-size: 12px;"
     (click)="undoMakeReady()"
@@ -20,91 +30,88 @@
 
   </div>
 </div>
-<p-table
-  [autoLayout]="true"
-  [rowHover]="true"
-  [resizableColumns]="true"
-  [showCurrentPageReport]="true"
-  [rows]="pageSize || 5"
-  [totalRecords]="authorizationExceptionData?.totalElements"
-  [value]="authorizationExceptionData?.content"
-  [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
-  responsiveLayout="stack"
-  [scrollable]="true"
-  [(selection)]="selectedAuthorizationException"
-  selectionMode="single"
-  dataKey="code"
-  scrollHeight="400px"
-  currentPageReportTemplate="{first} - {last} of {totalRecords}"
->
+<div class="card">
+  <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
+  <p-table
+    #exceptionsTable
+    [autoLayout]="true"
+    [rowHover]="true"
+    [resizableColumns]="true"
+    [showCurrentPageReport]="true"
+    [rows]="pageSize || 5"
+    [totalRecords]="authorizationExceptionData?.totalElements"
+    [value]="authorizationExceptionData?.content"
+    [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
+    responsiveLayout="stack"
+    [scrollable]="true"
+    [(selection)]="selectedAuthorizationException"
+    selectionMode="single"
+    dataKey="code"
+    scrollHeight="400px"
+    currentPageReportTemplate="{first} - {last} of {totalRecords}"
+    [globalFilterFields]="['description', 'code']"
+  >
 
-  <ng-template pTemplate="header">
-    <tr>
-      <th>
-        <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
-<!--        Select-->
-      </th>
-      <th>ID</th>
-      <th>Description</th>
-      <th>Remarks</th>
-      <th>Set standard</th>
-      <th>Used standard</th>
-      <th>Authorized</th>
-      <th>Submission date</th>
-      <th>Authorized by</th>
-      <th>Authorized date</th>
-      <th>Created By</th>
-    </tr>
-    <tr>
-      <th></th>
-      <th>
-        <input type="text" class="form-control w-75">
-      </th>
-      <th>
-        <input type="text" class="form-control w-75">
-      </th>
-    </tr>
-  </ng-template>
-  <ng-template pTemplate="body" let-exception>
-    <tr>
-      <td>
-        <p-tableCheckbox [value]="exception"></p-tableCheckbox>
-      </td>
-      <td>{{exception.code}}</td>
-      <td>
+    <ng-template pTemplate="header">
+      <tr>
+        <th style="width:0.5rem;">
+          <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+          <!--        Select-->
+        </th>
+        <th>ID</th>
+        <th>Description</th>
+        <th>Remarks</th>
+        <th>Set standard</th>
+        <th>Used standard</th>
+        <th>Authorized</th>
+        <th>Submission date</th>
+        <th>Authorized by</th>
+        <th>Authorized date</th>
+        <th>Created By</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-exception>
+      <tr>
+        <td>
+          <p-tableCheckbox [value]="exception"></p-tableCheckbox>
+        </td>
+        <td>{{exception.code}}</td>
+        <td>
         <span *ngIf = "exception?.description" title="{{exception?.description}}">
           {{exception?.description?.substring(0,10)}}...
         </span>
-      </td>
-      <td>
-<!--        {{exception?.remarks}}-->
-        <p-dropdown
-          [options]="completionRemarksData"
-          optionLabel="remark"
-          id="id"
-          [filter]="true"
-          filterBy="remark"
-          [showClear]="true"
-          [style]="{ width: '100%', height: '55%' }"
-          placeholder="Select remark"
-        >
-        </p-dropdown>
-      </td>
-      <td>{{exception?.set_standard}}</td>
-      <td>{{exception?.used_standard}}</td>
-      <td>{{exception?.is_authorized}}</td>
-      <td>{{exception?.transactions_date}}</td>
-      <td>{{exception?.authorized_by}}</td>
-      <td>{{exception?.authorized_date}}</td>
-      <td>{{exception?.exception_by}}</td>
-    </tr>
-  </ng-template>
-  <ng-template pTemplate="emptymessage">
-    <tr>
-      <td colspan="9">No Exception Detail(s) Found.</td>
-    </tr>
-  </ng-template>
-</p-table>
+        </td>
+        <td>
+          <p-dropdown
+            [options]="completionRemarksData"
+            optionLabel="remark"
+            id="id"
+            [filter]="true"
+            filterBy="remark"
+            [showClear]="true"
+            [style]="{ 'width': '130px', 'height': '40px' }"
+            placeholder="Select remark"
+            appendTo="body"
+          >
+          </p-dropdown>
+        </td>
+        <td>{{exception?.set_standard}}</td>
+        <td>{{exception?.used_standard}}</td>
+        <td>{{exception?.is_authorized}}</td>
+        <td>{{exception?.transactions_date}}</td>
+        <td>{{exception?.authorized_by}}</td>
+        <td>{{exception?.authorized_date}}</td>
+        <td>{{exception?.exception_by}}</td>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="emptymessage">
+      <tr>
+        <td colspan="11">No Exception Detail(s) Found.</td>
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
+
 
 <div class="row mt-5 mb-2 card">
   <div class="col-12 mt-2 mb-2">
@@ -122,6 +129,7 @@
         class="btn btn-primary" style="font-size: 12px;">Transmittal report
       </button>
     </div>
+    <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
     <p-table
       [autoLayout]="true"
       [rowHover]="true"
